--- a/panier.html
+++ b/panier.html
@@ -76,43 +76,19 @@
               <div class="col-12">
                 <div class="row no-gutters p-4">
                   <div class="col-12 card cardline">
-                    <!-- <div class="row no-gutters "> -->
-                        <!-- <input type="number" value="0" min="0" max="1000" step="1" /> -->
-
-                      <!-- <div class="col-md-2">
-                        <img src="images/Yann.png" class="card-img p-2" alt="...">
-                      </div> -->
-                      <!-- <h5 class="col-2 card-title d-flex align-items-center">Yann version 2.0</h5>
-                      <div class="col-2 d-flex align-items-center justify-content-center"><a href="#" class="btn btn-outline-info">+</a>2<a href="#"
-                          class="btn btn-outline-info">-</a>
-                      </div> -->
-                      <!-- <div class="col-2 d-flex align-items-center pl-2">10€</div> -->
-                      <!-- <div class="col-2 d-flex align-items-center pl-4">20€</div>
-                      <div class="col-2 d-flex align-items-center pl-4"><a href="#"
-                          class="btn btn-outline-info justify-content-center">Supp</a></div> -->
-                    <!-- </div> -->
                   </div>
                 </div>
               </div>
             </div>
           </section>
-          
-          
+
+
         </div>
-        <div class="col-12 bg-info">
-          <aside class="h-100">
-            <div class="row no-gutters">
-              <div class="col-12">
-                <p>Panier</p>
-              </div>
-              <div class="col-12">
-                <p>tété acheté : 32€</p>
-              </div>
-              <div class="col-12">
-                <p>Total TTC : 40€</p>
-              </div>
-            </div>
-          </aside>
+        <div class="col-12 bg-info ">
+          <!-- <aside class="h-100"> -->
+          <div class="row no-gutters total">
+          </div>
+          <!-- </aside> -->
         </div>
       </div>
       <div class="bg-info test"></div>
@@ -152,7 +128,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-    <script src="./cataloge/catalog_x100.js"></script>
+  <script src="./cataloge/catalog_x100.js"></script>
   <script src="scriptPanier.js"></script>
 
 </body>
