--- a/cataloguepage.html
+++ b/cataloguepage.html
@@ -58,18 +58,18 @@
 
           <h3>Catégories</h3>
           <ul>
-            <li><input type="checkbox"> Cras justo odio</li>
-            <li><input type="checkbox"> Cras justo odio</li>
-            <li><input type="checkbox"> Cras justo odio</li>
-            <li><input type="checkbox"> Cras justo odio</li>
-            <li><input type="checkbox"> Cras justo odio</li>
+            <li><input class="case" type="checkbox"> Cras justo odio</li>
+            <li><input class="case" type="checkbox"> Cras justo odio</li>
+            <li><input class="case" type="checkbox"> Cras justo odio</li>
+            <li><input class="case" type="checkbox"> Cras justo odio</li>
+            <li><input class="case" type="checkbox"> Cras justo odio</li>
           </ul>
 
           <h3>Prix</h3>
           <ul>
-            <li><input type="checkbox"> Par ordre Croissant</li>
-            <li><input type="checkbox"> Par ordre Décroissant</li>
-            <li><input type="checkbox"> Dernières Nouveautés</li>
+            <li><input class="case" type="checkbox"> Croissant</li>
+            <li><input class="case" type="checkbox"> Décroissant</li>
+            <li><input class="case" type="checkbox"> Nouveautés</li>
           </ul>
         </div>
         <div class="col-12 col-md-9">
@@ -84,7 +84,7 @@
       <div class="row no-gutters">
         <div class="col-12 p-0">
           <div class="bd-example text-center my-3 row">
-            <div class="col-12">
+            <div class="col-12 test">
               <a href="#">Contact Us</a>
               <a href="#"><i class="fab fa-facebook-square fa-2x"></i></a>
               <a href="#"><i class="fab fa-twitter-square fa-2x"></i></a>
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center bg-info text-white pt-3">
-        <p>Copyright<i class="far fa-copyright"></i> Aurore et Elian@CodinCamp4</p>
+        <p>Copyright<i class="far fa-copyright"></i>Aurore et Elian@CodinCamp4</p>
       </div>
     </footer>
 
